--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -35,6 +35,11 @@
             android:label="@string/title_activity_act_select_account"
             android:theme="@style/PopupTheme" >
         </activity>
+        <activity
+            android:name="com.nakedferret.simplepass.ActGenericFragTest_"
+            android:label="@string/title_activity_act_generic_frag_test"
+            android:theme="@style/PopupTheme" >
+        </activity>
     </application>
 
 </manifest>
