Changed the UI to test the new frag
ActGenericFragTest was renamed to ActFragTest. Ditto for the layouts

--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:theme="@style/PopupTheme" >
         </activity>
         <activity
-            android:name="com.nakedferret.simplepass.ActGenericFragTest_"
+            android:name="com.nakedferret.simplepass.ActFragTest_"
             android:label="@string/title_activity_act_generic_frag_test"
             android:theme="@style/PopupTheme" >
         </activity>
