Created cancel and create buttons in the crate vault fragment

--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity
             android:name="com.nakedferret.simplepass.ActFragTest_"
             android:label="@string/title_activity_act_generic_frag_test"
-            android:theme="@style/PopupTheme" >
+            android:theme="@style/PopupTheme"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
     </application>
 
