--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity
             android:name="com.nakedferret.simplepass.ui.ActFragTest_"
             android:label="@string/title_activity_act_generic_frag_test"
+            android:uiOptions="splitActionBarWhenNarrow"
             android:theme="@style/PopupTheme"
             android:windowSoftInputMode="adjustPan" >
         </activity>
