--- a/SimplePassApp/.classpath
+++ b/SimplePassApp/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/androidannotations-api-2.7.1.jar"/>
 	<classpathentry kind="lib" path="compile-libs/androidannotations-2.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/active-android.jar"/>
 	<classpathentry kind="src" path=".apt_generated">
 		<attributes>
 			<attribute name="optional" value="true"/>
