--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -9,11 +9,18 @@
         android:targetSdkVersion="18" />
 
     <application
+        android:name="com.nakedferret.simplepass.ApplicationSimplePass_"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        android:name="com.nakedferret.simplepass.ApplicationSimplePass_">
+        android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="VaultRoom.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
+
         <activity
             android:name="com.nakedferret.simplepass.ui.ActMain_"
             android:label="@string/app_name" >
@@ -39,8 +46,8 @@
         <activity
             android:name="com.nakedferret.simplepass.ui.ActFragTest_"
             android:label="@string/title_activity_act_generic_frag_test"
-            android:uiOptions="splitActionBarWhenNarrow"
             android:theme="@style/PopupTheme"
+            android:uiOptions="splitActionBarWhenNarrow"
             android:windowSoftInputMode="adjustPan" >
         </activity>
 
