--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:targetSdkVersion="18" />
 
     <application
-        android:name="com.nakedferret.simplepass.ApplicationSimplePass_"
+        android:name="com.nakedferret.simplepass.SimplePass_"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
