--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
         android:name="com.nakedferret.simplepass.SimplePass_"
         android:allowBackup="true"
@@ -53,6 +55,11 @@
 
         <service
             android:name="com.nakedferret.simplepass.ServicePassword_"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
+        <service
+            android:name="com.nakedferret.simplepass.ServiceOverlay_"
             android:enabled="true"
             android:exported="false" >
         </service>
