--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:theme="@style/PopupTheme" >
         </activity>
         <activity
-            android:name="com.nakedferret.simplepass.ui.ActFragTest_"
+            android:name="com.nakedferret.simplepass.ui.ActPasswordSelect_"
             android:label="@string/title_activity_act_generic_frag_test"
             android:theme="@style/PopupTheme"
             android:uiOptions="splitActionBarWhenNarrow"
