--- a/SimplePassApp/.classpath
+++ b/SimplePassApp/.classpath
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/androidannotations-api-2.7.1.jar"/>
 	<classpathentry kind="lib" path="compile-libs/androidannotations-2.7.1.jar"/>
 	<classpathentry kind="lib" path="libs/active-android.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar" sourcepath="/home/gonzalo/workspace/android-sdk-linux/extras/android/support/v4/src"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path=".apt_generated">
 		<attributes>
 			<attribute name="optional" value="true"/>
