--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -64,7 +64,7 @@
             android:exported="false" >
         </service>
         <service
-            android:name="com.nakedferret.simplepass.ServiceKeyboard"
+            android:name="com.nakedferret.simplepass.ServiceKeyboard_"
             android:permission="android.permission.BIND_INPUT_METHOD" >
             <intent-filter>
                 <action android:name="android.view.InputMethod" />
