--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -51,12 +51,27 @@
             android:theme="@style/PopupTheme"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+        <activity
+            android:name="com.ipaulpro.afilechooser.FileChooserActivity"
+            android:enabled="@bool/use_activity"
+            android:exported="true"
+            android:icon="@drawable/ic_chooser"
+            android:label="@string/choose_file" >
+            <intent-filter>
+                <action android:name="android.intent.action.GET_CONTENT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
+        </activity>
 
         <service
             android:name="com.nakedferret.simplepass.ServiceSimplePass_"
             android:enabled="true"
-            android:exported="false" 
-            android:label="SimplePass Service">
+            android:exported="false"
+            android:label="SimplePass Service" >
         </service>
         <service
             android:name="com.nakedferret.simplepass.ServiceKeyboard_"
