--- a/SimplePassApp/.classpath
+++ b/SimplePassApp/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="lib" path="compile-libs/androidannotations-2.7.1.jar"/>
 	<classpathentry kind="lib" path="libs/active-android.jar"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar" sourcepath="/home/gonzalo/workspace/android-sdk-linux/extras/android/support/v4/src"/>
+	<classpathentry kind="lib" path="libs/opencsv-2.3.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path=".apt_generated">
 		<attributes>
