--- a/SimplePassApp/AndroidManifest.xml
+++ b/SimplePassApp/AndroidManifest.xml
@@ -86,7 +86,7 @@
         </service>
 
         <activity
-            android:name="com.nakedferret.simplepass.ActImport_"
+            android:name="com.nakedferret.simplepass.ui.ActImport_"
             android:label="@string/title_act_import" >
         </activity>
     </application>
